--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Agency FB, sans-serif;
+  font-family: Agency FB, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background: rgb(213, 233, 251);
 }
 
