--- a/styles/styles.css
+++ b/styles/styles.css
@@ -573,6 +573,8 @@ nav img {
   color: white;
 }
 
+/** contact **/
+
 #contact {
   margin-top: 0px;
   display: grid;
@@ -583,19 +585,43 @@ nav img {
 }
 
 .contact-tiles {
-  width: 40%;
-  display: block;
-  padding: 10px;
-  height: 80px;
-  margin-top: 0x;
+  height: 320px;
+  margin-top: 300px;
   background: aliceblue;
-  margin-bottom: 20px;
 }
 
-.contact-tiles a {
-  margin-inline: 10px;
+.contact-tiles h3 {
+  font-weight: bold;
+  color: black;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
+.contact-tiles img {
+  width: 330px;
+  padding: 5px;
+  opacity: 0.6;
+  margin-bottom: 10px;
+}
+
+#contact-btn {
+  height: 218px;
+  padding: 5px;
+  border: 1px solid black;
+  transition: all 0.5s ease-in-out;
+}
+
+#location {
+  height: 218px;
+  padding: 5px;
+  transition: all 0.5s ease-in-out;
+}
+
+#location:hover,
+#contact-btn:hover {
+  opacity: 1;
+  box-shadow: -5px 5px 70px #7fbcf3;
+}
 /*-- footer --*/
 
 .main-footer {
@@ -696,7 +722,7 @@ p {
 /* The actual popup (appears on top) */
 .popup .popuptext {
   visibility: hidden;
-  width: 160px;
+  width: 250px;
   background-color: #555;
   color: #fff;
   text-align: center;
@@ -706,7 +732,7 @@ p {
   z-index: 1;
   bottom: 125%;
   left: 50%;
-  margin-left: -80px;
+  margin-left: -100px;
 }
 
 /* Popup arrow */
@@ -862,6 +888,14 @@ p {
 
   #site-map {
     display: none;
+  }
+
+  #myPopup {
+    font-size: 12px;
+  }
+
+  .popup .popuptext {
+    margin-left: -125px;
   }
 
   /** About **/
