--- a/css/style.css
+++ b/css/style.css
@@ -821,7 +821,7 @@ a {
 
 .hire-btn a:hover {
   color: black !important;
-  background-color: transparent;
+  /* background-color: transparent; */
 }
 
 .hire-btn span {
@@ -1132,13 +1132,13 @@ a {
 
 .video-container {
   background-color: #3c0992;
+  box-shadow: 3px 3px 6px #3b0992b1;
   height: 520px;
   width: 70%;
   display: flex;
   flex-wrap: wrap;
   margin: auto;
   margin-top: 30px;
-  box-shadow: 3px 3px 6px #3c0992cc;
 }
 
 .video-gallery-wrapper {
@@ -1146,7 +1146,17 @@ a {
   width: 100%;
   height: calc(100% - 75px);
   background-color: rgb(58, 50, 107);
+  box-shadow: 2px 2px 7px rgba(255, 255, 255, 0.6);
   display: flex;
+  justify-content: space-between;
+}
+
+.playlist {
+  position: absolute;
+  display: flex;
+  width: 13.1%;
+  background-color: rgba(60, 9, 146, 1);
+  padding: 10px 0;
 }
 
 .video-list {
@@ -1155,12 +1165,26 @@ a {
   height: auto;
   overflow: auto;
   scrollbar-width: thin;
+  margin-top: 52px;
 }
 
-.video-container video {
+.video-list video {
   width: 100%;
   object-fit: cover;
   cursor: pointer;
+  filter: grayscale(1);
+}
+
+/* .video-list span {
+  font-size: 14px;
+  margin-top: -15px;
+  margin-bottom: 10px;
+  display: none;
+} */
+
+.video-list video:hover {
+  box-shadow: 2px 2px 7px rgba(255, 255, 255, 0.6);
+  filter: grayscale(0);
 }
 
 .main-video {
@@ -1169,15 +1193,29 @@ a {
   padding: 10px;
 }
 
-.video-container .main-video video {
+.main-video video {
   height: 100%;
   width: 100%;
   outline: none;
   padding: 5px;
+  border-radius: 10px;
+  box-shadow: 2px 2px 7px rgba(255, 255, 255, 0.6);
+}
+
+.video-title {
+  font-size: 20px;
+  margin-top: -15px;
+}
+
+.video-list .active-video {
+  filter: grayscale(0);
+  border-radius: 10px;
+  border: 2px solid rgba(255, 255, 255, 0.6);
+  box-shadow: 2px 2px 7px rgba(255, 255, 255, 0.6);
 }
 
 .video-container span {
-  text-align: center;
+  /* text-align: center; */
   display: flex;
   justify-content: center;
   width: 100%;
@@ -1218,6 +1256,10 @@ a {
   .video-container {
     height: 400px;
     width: 90%;
+  }
+
+  .playlist {
+    width: 21%;
   }
 
   .video-list {
@@ -1266,6 +1308,10 @@ a {
     height: 300px;
   }
 
+  .playlist {
+    padding: 5px;
+  }
+
   .video-container span {
     font-size: 16px;
   }
@@ -1289,6 +1335,15 @@ a {
 
   .video-container {
     height: 240px;
+  }
+
+  .playlist {
+    padding: 0px;
+  }
+
+  .video-list {
+    padding: 0px 10px !important;
+    margin-top: 35px !important;
   }
 
   .video-gallery-wrapper {
